--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,8 @@
-#root {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
 html,
 body {
   height: 100%;
   width: 100%;
+  min-width: 800px;
 
   padding: 0;
   margin: 0;
